--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
+body{
+    width:100vw;
+    height: 100vh;
+    background-color:wheat;
+    /* overflow: hidden; */
+    /* max-width: 1024px;
+    max-height: 728px; */
+    margin: 0px;
+    
+   }
